
{{$NEXT}}

1.20130612 2013-06-11 America/Los_Angeles

 -  dmarc_view_reports: improve gentoo support by adding /usr
    to search path for GeoIP DBs on gentoo - Benny Pedersen

1.20130610 2013-06-10 America/Los_Angeles

 - tolerate receiving reports with no records (ahem, hotmail.com)
 - simplify SMTP flow-of-control, additional SMTP tests
 - avoid the join/split of binip in SQL::populate_agg_records
 - replace carp with warn in several places (more legible warning)
 - added RUA valididy checks to dmarc_lookup

1.20130605 2013-06-05 America/Los_Angeles

 - in aggregate reports, group by IP and auth results (was only IP)
 - refactored SQL::retrieve_todo into 3 methods, added tests
 - SQL: added unique constraint on domain.domain

1.20130604 2013-06-04 America/Los_Angeles

 - main branches are master (devel) and releases (more obvious)
 - added mailing list impact FAQ
 - SQL: removed record.rcpt_dom
 - corrected a XML schema error
 - index.html
    - widened disposition column
    - only show rcpt domain in record (subgrid)
    - corrected subgrid row_id
 - additional validation of aggregate reports

1.20130601 2013-05-31 America/Los_Angeles

 - make sure a report record exists when fetching SMTP todo
 - added insecure SMTP fallback if STARTTLS fails
 - added color coded results to HTTP grid

1.20130531 2013-05-30 America/Los_Angeles

 - added gzip support to HTTP server, compressed JS files
 - reason is internally an arrayref of hashrefs (was a single hashref)
 - documentation additions
 - removed unused JS files
 - add validation and fixup of SPF result for incoming reports
 - normalized domain columns in spf & dkim tables

1.20130528 2013-05-28 America/Los_Angeles

 - bump major version to 1
 - normalized domain columns in report_record
 - fixups to handle reports with invalid formatting
 - improved handling for IMAP SSL connections
 - made internal represention of Mail::DMARC::dkim & spf consistent
   with their aggregate report representation
